--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - .:/app
     # Command to run the application (overrides CMD in Dockerfile for dev)
     # This ensures the API restarts if code changes are detected
-    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload
+    command: python -m uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload
     environment:
       # Example environment variables (if any needed by your app)
       # - API_KEY=your_secret_key
